--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -9,46 +9,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
   <style>
-    :root { --brand: #22c55e; }
-    body{ font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif; }
-    .container{ max-width: 980px; }
-    .shadow-soft{ box-shadow: 0 10px 25px rgba(2,6,23,.08); }
-    .badge{ display:inline-block; padding:4px 10px; border-radius:999px; font-weight:700; font-size:.8rem; }
-
-    /* === Countdown Dourado === */
-    #countdownBox {
-      background: linear-gradient(90deg, #fbbf24, #f59e0b, #facc15);
-      color: #fff;
-      font-weight: 800;
-      font-size: 1.4rem;
-      padding: 0.6rem 1.8rem;
-      border-radius: 0.8rem;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      box-shadow: 0 0 25px rgba(245,158,11,0.5);
-      transition: all 0.3s ease;
-      animation: gradientMove 3s linear infinite;
-      background-size: 200% 200%;
-      margin-bottom: 1rem;
-    }
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-    #countdownBox.pulse {
-      animation: pulse 1s infinite, gradientMove 3s linear infinite;
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 25px rgba(245,158,11,0.5); }
-      50% { transform: scale(1.05); box-shadow: 0 0 45px rgba(245,158,11,0.8); }
-      100% { transform: scale(1); box-shadow: 0 0 25px rgba(245,158,11,0.5); }
-    }
+    :root { --brand:#22c55e; }
+    body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,sans-serif; }
+    .container{ max-width:980px; }
+    .shadow-soft{ box-shadow:0 10px 25px rgba(2,6,23,.08); }
+    .badge{ display:inline-block;padding:4px 10px;border-radius:999px;font-weight:700;font-size:.8rem; }
+    #countdownBox{background:linear-gradient(90deg,#fbbf24,#f59e0b,#facc15);color:#fff;font-weight:800;font-size:1.4rem;padding:.6rem 1.8rem;border-radius:.8rem;display:inline-flex;align-items:center;gap:.5rem;box-shadow:0 0 25px rgba(245,158,11,.5);animation:gradientMove 3s linear infinite;background-size:200% 200%;margin-bottom:1rem;}
+    @keyframes gradientMove{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+    #countdownBox.pulse{animation:pulse 1s infinite,gradientMove 3s linear infinite}
+    @keyframes pulse{0%{transform:scale(1);box-shadow:0 0 25px rgba(245,158,11,.5)}50%{transform:scale(1.05);box-shadow:0 0 45px rgba(245,158,11,.8)}100%{transform:scale(1);box-shadow:0 0 25px rgba(245,158,11,.5)}}
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
+
   <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
@@ -95,7 +70,7 @@
           <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
 
           <ul class="mt-4 space-y-3 text-slate-700">
-            <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta semanal completa</strong> — 3 opções por refeição (café, almoço, lanche, jantar e ceia) ajustadas ao seu perfil.</span></li>
+            <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta semanal completa</strong> — 3 opções por refeição ajustadas ao seu perfil.</span></li>
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Livro digital com 200+ receitas</strong> — fáceis, econômicas e saborosas.</span></li>
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Suplementação recomendada</strong> — alinhada ao seu objetivo e biotipo.</span></li>
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Estratégias complementares</strong> — hábitos e ajustes que aceleram o resultado.</span></li>
@@ -106,52 +81,36 @@
             <p id="resumoPlano" class="font-semibold">Seu plano: <span id="planoSpan">Personalizado</span>.</p>
             <p id="descSpan" class="mt-1 text-slate-800"></p>
           </div>
-
-          <div class="mt-6 grid md:grid-cols-2 gap-4">
-            <div class="p-4 rounded-xl border border-slate-200">
-              <p class="text-sm text-slate-500">Por que funciona</p>
-              <p class="mt-1">Combina <strong>dieta ideal</strong> + <strong>biotipo</strong> + <strong>IMC</strong> com passos práticos e sustentáveis.</p>
-            </div>
-            <div class="p-4 rounded-xl border border-slate-200">
-              <p class="text-sm text-slate-500">Sem promessas irreais</p>
-              <p class="mt-1">Foco em constância, saciedade e saúde — sem radicalismos. Pequenos passos, grande impacto.</p>
-            </div>
-          </div>
         </div>
 
-        <!-- Box de Pagamento -->
+        <!-- BOX DE PAGAMENTO -->
         <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center relative">
-          
-          <!-- Countdown no topo -->
-          <div id="countdownBox" class="mx-auto">
-            ⏰ <span>Oferta expira em:</span> <span id="countdown">05:00</span>
-          </div>
+          <div id="countdownBox" class="mx-auto">⏰ <span>Oferta expira em:</span> <span id="countdown">05:00</span></div>
 
           <div class="text-sm text-slate-500 mt-4">Continue</div>
           <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3>
 
-          <!-- Preço com destaque -->
           <h4 class="text-2xl font-extrabold mt-3 text-emerald-600">
             <span class="text-amber-600 text-sm uppercase font-semibold block mb-1">🔥 Somente hoje</span>
             De <span class="text-red-500 line-through">R$ 249,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
           </h4>
 
           <p class="mt-3 text-slate-700 text-sm leading-relaxed">
-            Estamos oferecendo este valor especial porque <strong>uma vez por ano</strong> escolhemos abrir vagas com um preço simbólico, 
-            permitindo que mais pessoas possam transformar sua saúde e alcançar seus objetivos com um plano realmente acessível.
+            Estamos oferecendo este valor especial porque <strong>uma vez por ano</strong> abrimos vagas com preço simbólico.
           </p>
 
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</div>
 
-          <a id="btnPagamento" href="/pagamento/" class="mt-6 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
+          <!-- container do box -->
+          <div id="mp-checkout" class="mt-6"></div>
+
+          <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
             Quero meu plano agora
           </a>
 
-          <!-- Prova Social -->
           <div id="buyersCount" class="mt-4 text-amber-600 font-semibold text-lg">
             🔥 <span id="buyersNumber">37</span> pessoas compraram nas últimas 24h!
           </div>
-
           <div class="mt-4 text-xs text-slate-500">Ao continuar, você confirma que leu e concorda com nossos termos.</div>
         </aside>
       </div>
@@ -164,86 +123,95 @@
 
   <!-- SCRIPT FINAL -->
   <script>
-  document.addEventListener("DOMContentLoaded", function(){
-    function $(id){ return document.getElementById(id); }
-    function getParam(k){ try{ return new URLSearchParams(location.search).get(k) || ''; }catch(_){ return ''; } }
+  document.addEventListener("DOMContentLoaded",function(){
+    const MP_PUBLIC_KEY="APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
+    const MP_ENDPOINT="https://dietapronta.online/api/mp-preference";
+    const CHECK_STATUS="https://italomelo.com/server/check_status.php";
+    const HOME_UPSELL="https://dietapronta.online/upsell/?ref=";
+    const $=id=>document.getElementById(id);
 
-    const ref   = getParam('ref')   || localStorage.getItem('mp_external_ref') || '';
-    const nome  = getParam('nome')  || localStorage.getItem('lead_nome') || '';
-    const email = getParam('email') || localStorage.getItem('lead_email') || '';
-    const whats = getParam('whats') || localStorage.getItem('lead_whats') || '';
+    // Dados do lead
+    const nome=localStorage.getItem('lead_nome')||'';
+    const email=localStorage.getItem('lead_email')||'';
+    const whats=localStorage.getItem('lead_whats')||'';
+    const diet_title=localStorage.getItem('diet_title')||'Plano de Dieta Completo';
+    const body_type=localStorage.getItem('body_type')||'';
+    const ref='ref-'+Date.now()+'-'+Math.random().toString(36).slice(2,8);
+    try{localStorage.setItem('mp_external_ref',ref);}catch(e){}
 
-    const resultTitle = localStorage.getItem('quiz_result_title') || localStorage.getItem('quiz_diet_title') || '';
-    const resultDesc  = localStorage.getItem('quiz_result_desc') || '';
-    const bodyType    = localStorage.getItem('quiz_body_type') || localStorage.getItem('quiz_biotype') || '';
-    const imcVal      = localStorage.getItem('quiz_imc_value');
-    const imcLabel    = localStorage.getItem('quiz_imc_label') || '';
-
-    if($('nomeSpan') && nome){ $('nomeSpan').textContent = nome; }
-    if($('imcInfo') && imcVal){
-      const v = parseFloat(imcVal);
-      const tone = {
-        'abaixo do peso': 'Vamos reforçar densidade nutricional sem exageros.',
-        'faixa saudável': 'Excelente! Vamos preservar seu bem-estar.',
-        'sobrepeso': 'Vamos reduzir gordura com segurança.',
-        'obesidade leve': 'Nossa prioridade é conforto e progresso consistente.'
-      };
-      $('imcInfo').innerHTML = "<span class='badge bg-emerald-100 text-emerald-800'>IMC "+v+" — "+imcLabel+"</span> <span class='ml-2 text-slate-700'>"+(tone[imcLabel]||'Plano ajustado para você.')+"</span>";
-      $('imcInfo').classList.remove('hidden');
-    }
-
-    if($('planoSpan') && resultTitle){ $('planoSpan').textContent = resultTitle.replace(/^🎯\s*/,''); }
-    if($('descSpan') && resultDesc){ $('descSpan').textContent = resultDesc; }
-
-    const payUrl = new URL('/pagamento/', location.origin);
-    if(ref)   payUrl.searchParams.set('ref', ref);
-    if(nome)  payUrl.searchParams.set('nome', nome);
-    if(email) payUrl.searchParams.set('email', email);
-    if(whats) payUrl.searchParams.set('whats', whats);
-
-    if(resultTitle) payUrl.searchParams.set('diet_title', resultTitle);
-    if(bodyType)    payUrl.searchParams.set('body_type', bodyType);
-    if(imcVal)      payUrl.searchParams.set('imc_value', imcVal);
-    if(imcLabel)    payUrl.searchParams.set('imc_label', imcLabel);
-
-    try {
-      if(resultTitle) localStorage.setItem('diet_title', resultTitle);
-      if(bodyType)    localStorage.setItem('body_type', bodyType);
-      if(imcVal)      localStorage.setItem('imc_value', imcVal);
-      if(imcLabel)    localStorage.setItem('imc_label', imcLabel);
-    } catch(e){ console.warn("localStorage erro", e); }
-
-    if($('btnPagamento')) $('btnPagamento').setAttribute('href', payUrl.toString());
-    if($('btnContinuarTop')) $('btnContinuarTop').setAttribute('href', '#oferta');
-    if($('year')) $('year').textContent = (new Date()).getFullYear();
+    if($('year'))$('year').textContent=new Date().getFullYear();
 
     // === Countdown ===
-    let timeLeft = 5 * 60;
-    const countdownEl = $('countdown');
-    const countdownBox = $('countdownBox');
-    const timer = setInterval(() => {
-      const min = String(Math.floor(timeLeft / 60)).padStart(2, '0');
-      const sec = String(timeLeft % 60).padStart(2, '0');
-      countdownEl.textContent = `${min}:${sec}`;
-      if (timeLeft <= 60) countdownBox.classList.add("pulse");
-      if (timeLeft <= 0) {
-        clearInterval(timer);
-        countdownEl.textContent = "00:00";
-        countdownBox.textContent = "⏰ Oferta expirada!";
-        if($('btnPagamento')) $('btnPagamento').classList.add("bg-gray-400","cursor-not-allowed","hover:bg-gray-400");
-      }
+    let timeLeft=5*60;
+    const countdownEl=$('countdown');
+    const countdownBox=$('countdownBox');
+    setInterval(()=>{
+      const m=String(Math.floor(timeLeft/60)).padStart(2,'0');
+      const s=String(timeLeft%60).padStart(2,'0');
+      countdownEl.textContent=`${m}:${s}`;
+      if(timeLeft<=60)countdownBox.classList.add("pulse");
+      if(timeLeft<=0){countdownEl.textContent="00:00";}
       timeLeft--;
-    }, 1000);
+    },1000);
 
     // === Pessoas comprando ===
-    const buyersEl = $('buyersNumber');
-    let buyers = 30 + Math.floor(Math.random() * 8);
-    buyersEl.textContent = buyers;
-    setInterval(() => {
-      const change = Math.random() < 0.5 ? -1 : 1;
-      buyers = Math.max(20, buyers + change);
-      buyersEl.textContent = buyers;
-    }, 7000);
+    const buyersEl=$('buyersNumber');
+    let buyers=30+Math.floor(Math.random()*8);
+    buyersEl.textContent=buyers;
+    setInterval(()=>{const c=Math.random()<0.5?-1:1;buyers=Math.max(20,buyers+c);buyersEl.textContent=buyers;},7000);
+
+    // === Pagamento ===
+    $('btnPagamento').addEventListener('click',async(ev)=>{
+      ev.preventDefault();
+      const btn=$('btnPagamento');
+      btn.disabled=true;
+      btn.textContent="Gerando pagamento...";
+      try{
+        const r=await fetch(MP_ENDPOINT,{
+          method:"POST",
+          headers:{"Content-Type":"application/json"},
+          body:JSON.stringify({
+            valor:19.90,
+            titulo:diet_title,
+            external_reference:ref,
+            customer_name:nome,
+            customer_email:email,
+            customer_whatsapp:whats,
+            body_type
+          })
+        });
+        const data=await r.json();
+        if(!data||!data.id)throw new Error("Falha ao criar preferência.");
+        const mp=new MercadoPago(MP_PUBLIC_KEY,{locale:"pt-BR"});
+        mp.checkout({preference:{id:data.id},autoOpen:true,render:{container:"#mp-checkout",label:"Pagar R$ 19,90"}});
+        btn.textContent="Abrindo pagamento...";
+        startPolling(ref,btn);
+      }catch(e){
+        console.error(e);
+        btn.textContent="Erro, tente novamente";
+      }
+      btn.disabled=false;
+    });
+
+    function startPolling(ref,btn){
+      let tries=0;
+      const timer=setInterval(async()=>{
+        tries++;
+        try{
+          const res=await fetch(`${CHECK_STATUS}?ref=${encodeURIComponent(ref)}&t=${Date.now()}`);
+          const data=await res.json();
+          if(data&&data.found){
+            const st=(data.status||"").toLowerCase();
+            if(st==="approved"){
+              clearInterval(timer);
+              btn.textContent="✅ Pagamento aprovado! Redirecionando...";
+              setTimeout(()=>window.location.href=HOME_UPSELL+encodeURIComponent(ref),2000);
+            }
+          }
+        }catch(e){console.warn(e);}
+        if(tries>40)clearInterval(timer);
+      },5000);
+    }
   });
   </script>
 </body>
