--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -1,1 +1,204 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Seu Plano Personalizado está pronto ✅</title>
+  <meta name="description" content="Pré-pagamento: plano personalizado e resultados reais de nossos pacientes.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
+  <style>
+    :root { --brand: #22c55e; --gold: #fbbf24; }
+    body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,sans-serif; }
+    .container{ max-width:980px; }
+    .shadow-soft{ box-shadow:0 10px 25px rgba(2,6,23,.08); }
+    .badge{ display:inline-block;padding:4px 10px;border-radius:999px;font-weight:700;font-size:.8rem; }
+    #countdownBox{background:linear-gradient(90deg,#fbbf24,#f59e0b,#facc15);color:#fff;font-weight:800;font-size:1.4rem;padding:.6rem 1.8rem;border-radius:.8rem;display:inline-flex;align-items:center;gap:.5rem;box-shadow:0 0 25px rgba(245,158,11,.5);animation:gradientMove 3s linear infinite;background-size:200% 200%;margin-bottom:1rem;}
+    @keyframes gradientMove{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+    #countdownBox.pulse{animation:pulse 1s infinite,gradientMove 3s linear infinite}
+    @keyframes pulse{0%{transform:scale(1);box-shadow:0 0 25px rgba(245,158,11,.5)}50%{transform:scale(1.05);box-shadow:0 0 45px rgba(245,158,11,.8)}100%{transform:scale(1);box-shadow:0 0 25px rgba(245,158,11,.5)}}
+    .fade-enter{opacity:0;transform:translateY(20px);transition:all .5s ease;}
+    .fade-enter-active{opacity:1;transform:translateY(0);}
+  </style>
+</head>
+<body class="bg-slate-50 text-slate-900">
+
+  <!-- Header -->
+  <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
+    <div class="container mx-auto px-4 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <div class="h-9 w-9 rounded-2xl bg-emerald-100 flex items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-600" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6v6l4 2"/></svg>
+        </div>
+        <span class="font-extrabold tracking-tight">Dieta Pronta Online</span>
+      </div>
+      <div class="text-sm text-slate-500 hidden md:block">Plano personalizado pronto para você</div>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="bg-gradient-to-b from-white to-slate-100">
+    <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
+      <div>
+        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Seu plano personalizado está pronto 🎉</h1>
+        <p id="intro" class="mt-4 text-lg text-slate-600">Com base nas suas respostas, montamos um <strong>PLANO COMPLETO</strong> e 100% ajustado ao seu corpo e rotina.</p>
+        <div id="imcInfo" class="mt-4 hidden"></div>
+        <div class="mt-6 flex gap-3">
+          <a id="btnContinuarTop" href="#oferta" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Ver o que você vai receber</a>
+          <span class="text-slate-500 self-center">Leva menos de 1 minuto</span>
+        </div>
+      </div>
+      <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
+        <img src="https://dietapronta.online/nutri2.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
+        <div class="p-6">
+          <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
+          <p class="mt-1 text-slate-600">Nada de fórmulas mágicas: passos simples, combinações inteligentes e foco no que funciona para <span id="nomeSpan">você</span>.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Seção de oferta -->
+  <section id="oferta" class="py-10">
+    <div class="container mx-auto px-4 grid lg:grid-cols-3 gap-6 items-start">
+      <div class="lg:col-span-2 p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
+        <div class="flex items-center gap-2 text-sm text-slate-500"><span class="badge bg-emerald-100 text-emerald-800">Personalizado</span> Plano baseado no seu biotipo e IMC</div>
+        <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
+        <ul class="mt-4 space-y-3 text-slate-700">
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta semanal completa</strong> — 3 opções por refeição ajustadas ao seu perfil.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Livro digital com 200+ receitas</strong> — fáceis, econômicas e saborosas.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Suplementação recomendada</strong> — alinhada ao seu objetivo e biotipo.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Estratégias complementares</strong> — hábitos e ajustes que aceleram o resultado.</span></li>
+          <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Explicação do seu metabolismo e tipo de corpo</strong> — entenda como usar isso ao seu favor.</span></li>
+        </ul>
+      </div>
+
+      <!-- Box de Pagamento -->
+      <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center relative">
+        <div id="countdownBox" class="mx-auto mb-2">⏰ <span>Oferta expira em:</span> <span id="countdown">05:00</span></div>
+        <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3>
+        <h4 class="text-2xl font-extrabold mt-3 text-emerald-600">
+          <span class="text-amber-600 text-sm uppercase font-semibold block mb-1">🔥 Somente hoje</span>
+          De <span class="text-red-500 line-through">R$ 249,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
+        </h4>
+        <p class="mt-3 text-slate-700 text-sm leading-relaxed">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</p>
+        <div id="mp-checkout" class="mt-4"></div>
+        <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Quero meu plano agora</a>
+
+        <div class="mt-4">
+          <button id="btnResultados" class="rounded-xl px-5 py-3 font-semibold text-white bg-[var(--gold)] hover:bg-yellow-500 transition flex items-center justify-center gap-2 w-full">
+            <span>📸 Veja os resultados de nossos pacientes</span>
+          </button>
+        </div>
+
+        <!-- Galeria -->
+        <div id="galeria" class="hidden mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4 fade-enter">
+          <img src="https://dietapronta.online/uploads/9kg%20em%205%20semanas.jpg" class="rounded-xl shadow-md w-full object-cover">
+          <img src="https://dietapronta.online/uploads/mariele%20queiroz.jpg" class="rounded-xl shadow-md w-full object-cover">
+          <img src="https://dietapronta.online/uploads/dieta.jpg" class="rounded-xl shadow-md w-full object-cover">
+          <img src="https://dietapronta.online/uploads/Julia%20andrade.jpg" class="rounded-xl shadow-md w-full object-cover">
+          <img src="https://dietapronta.online/uploads/cibele%20almeida.jpg" class="rounded-xl shadow-md w-full object-cover">
+          <img src="https://dietapronta.online/uploads/Luciana%20Martins.jpg" class="rounded-xl shadow-md w-full object-cover">
+        </div>
+      </aside>
+    </div>
+  </section>
+
+  <footer class="py-10 text-center text-sm text-slate-500">
+    <p>© <span id="year"></span> Dieta Pronta Online. Todos os direitos reservados.</p>
+  </footer>
+
+  <script>
+  document.addEventListener("DOMContentLoaded",function(){
+    const MP_PUBLIC_KEY="APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
+    const MP_ENDPOINT="https://dietapronta.online/api/mp-preference";
+    const CHECK_STATUS="https://italomelo.com/server/check_status.php";
+    const HOME_UPSELL="https://dietapronta.online/upsell/?ref=";
+    const $=id=>document.getElementById(id);
+
+    const nome=localStorage.getItem('lead_nome')||'';
+    const email=localStorage.getItem('lead_email')||'';
+    const whats=localStorage.getItem('lead_whats')||'';
+    const diet_title=localStorage.getItem('diet_title')||'Plano de Dieta Completo';
+    const body_type=localStorage.getItem('body_type')||'';
+    const ref='ref-'+Date.now()+'-'+Math.random().toString(36).slice(2,8);
+    try{localStorage.setItem('mp_external_ref',ref);}catch(e){}
+
+    if($('year'))$('year').textContent=new Date().getFullYear();
+
+    // Countdown
+    let t=5*60;const cE=$('countdown'),cB=$('countdownBox');
+    setInterval(()=>{const m=String(Math.floor(t/60)).padStart(2,'0');const s=String(t%60).padStart(2,'0');cE.textContent=`${m}:${s}`;if(t<=60)cB.classList.add('pulse');if(t<=0)cE.textContent='00:00';t--;},1000);
+
+    // Toggle galeria
+    const btnResultados=$('btnResultados'),galeria=$('galeria');
+    btnResultados.addEventListener('click',()=>{
+      const isHidden=galeria.classList.contains('hidden');
+      if(isHidden){
+        galeria.classList.remove('hidden');
+        setTimeout(()=>galeria.classList.add('fade-enter-active'),20);
+        btnResultados.innerHTML="⬆️ Ocultar resultados";
+      }else{
+        galeria.classList.add('hidden');
+        galeria.classList.remove('fade-enter-active');
+        btnResultados.innerHTML="📸 Veja os resultados de nossos pacientes";
+      }
+    });
+
+    // Pagamento
+    $('btnPagamento').addEventListener('click',async(ev)=>{
+      ev.preventDefault();
+      const btn=$('btnPagamento');
+      btn.disabled=true;
+      btn.textContent="Gerando pagamento...";
+      try{
+        const r=await fetch(MP_ENDPOINT,{
+          method:"POST",
+          headers:{"Content-Type":"application/json"},
+          body:JSON.stringify({
+            valor:19.90,
+            titulo:diet_title,
+            external_reference:ref,
+            customer_name:nome,
+            customer_email:email,
+            customer_whatsapp:whats,
+            body_type
+          })
+        });
+        const data=await r.json();
+        if(!data||!data.id)throw new Error("Falha ao criar preferência.");
+        const mp=new MercadoPago(MP_PUBLIC_KEY,{locale:"pt-BR"});
+        mp.checkout({preference:{id:data.id},autoOpen:true,render:{container:"#mp-checkout",label:"Pagar R$ 19,90"}});
+        btn.textContent="Abrindo pagamento...";
+        startPolling(ref,btn);
+      }catch(e){btn.textContent="Erro, tente novamente";}
+      btn.disabled=false;
+    });
+
+    function startPolling(ref,btn){
+      let tries=0;
+      const timer=setInterval(async()=>{
+        tries++;
+        try{
+          const res=await fetch(`${CHECK_STATUS}?ref=${encodeURIComponent(ref)}&t=${Date.now()}`);
+          const data=await res.json();
+          if(data&&data.found&&data.status){
+            const st=data.status.toLowerCase();
+            if(st==="approved"){
+              clearInterval(timer);
+              btn.textContent="✅ Pagamento aprovado! Redirecionando...";
+              setTimeout(()=>window.location.href=HOME_UPSELL+encodeURIComponent(ref),2000);
+            }
+          }
+        }catch(e){}
+        if(tries>40)clearInterval(timer);
+      },5000);
+    }
+  });
+  </script>
+</body>
+</html>
