--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -12,7 +11,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://sdk.mercadopago.com/js/v2"></script>
   <style>
-    :root { --brand: #22c55e; --gold: #fbbf24; }
+    :root { --brand:#22c55e; --gold:#fbbf24; }
     body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,sans-serif; }
     .container{ max-width:980px; }
     .shadow-soft{ box-shadow:0 10px 25px rgba(2,6,23,.08); }
@@ -21,8 +20,8 @@
     @keyframes gradientMove{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
     #countdownBox.pulse{animation:pulse 1s infinite,gradientMove 3s linear infinite}
     @keyframes pulse{0%{transform:scale(1);box-shadow:0 0 25px rgba(245,158,11,.5)}50%{transform:scale(1.05);box-shadow:0 0 45px rgba(245,158,11,.8)}100%{transform:scale(1);box-shadow:0 0 25px rgba(245,158,11,.5)}}
-    .fade-enter{opacity:0;transform:translateY(20px);transition:all .5s ease;}
-    .fade-enter-active{opacity:1;transform:translateY(0);}
+    .galeria img{transition:transform .4s ease, box-shadow .4s ease;}
+    .galeria img:hover{transform:scale(1.05);box-shadow:0 10px 30px rgba(0,0,0,.25);}
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
@@ -45,28 +44,26 @@
     <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Seu plano personalizado está pronto 🎉</h1>
-        <p id="intro" class="mt-4 text-lg text-slate-600">Com base nas suas respostas, montamos um <strong>PLANO COMPLETO</strong> e 100% ajustado ao seu corpo e rotina.</p>
+        <p class="mt-4 text-lg text-slate-600">Com base nas suas respostas, montamos um <strong>PLANO COMPLETO</strong> e 100% ajustado ao seu corpo e rotina.</p>
         <div id="imcInfo" class="mt-4 hidden"></div>
-        <div class="mt-6 flex gap-3">
-          <a id="btnContinuarTop" href="#oferta" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Ver o que você vai receber</a>
-          <span class="text-slate-500 self-center">Leva menos de 1 minuto</span>
-        </div>
       </div>
       <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
         <img src="https://dietapronta.online/nutri2.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
         <div class="p-6">
           <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
-          <p class="mt-1 text-slate-600">Nada de fórmulas mágicas: passos simples, combinações inteligentes e foco no que funciona para <span id="nomeSpan">você</span>.</p>
+          <p class="mt-1 text-slate-600">Nada de fórmulas mágicas: passos simples e foco no que funciona para <span id="nomeSpan">você</span>.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Seção de oferta -->
+  <!-- Oferta -->
   <section id="oferta" class="py-10">
     <div class="container mx-auto px-4 grid lg:grid-cols-3 gap-6 items-start">
       <div class="lg:col-span-2 p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
-        <div class="flex items-center gap-2 text-sm text-slate-500"><span class="badge bg-emerald-100 text-emerald-800">Personalizado</span> Plano baseado no seu biotipo e IMC</div>
+        <div class="flex items-center gap-2 text-sm text-slate-500">
+          <span class="badge bg-emerald-100 text-emerald-800">Personalizado</span> Plano baseado no seu biotipo e IMC
+        </div>
         <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
         <ul class="mt-4 space-y-3 text-slate-700">
           <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta semanal completa</strong> — 3 opções por refeição ajustadas ao seu perfil.</span></li>
@@ -75,6 +72,13 @@
           <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Estratégias complementares</strong> — hábitos e ajustes que aceleram o resultado.</span></li>
           <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Explicação do seu metabolismo e tipo de corpo</strong> — entenda como usar isso ao seu favor.</span></li>
         </ul>
+
+        <!-- Botão resultados -->
+        <div class="text-center mt-6">
+          <button class="rounded-xl px-6 py-3 bg-[#fbbf24] text-white font-semibold hover:bg-yellow-500 transition shadow-md">
+            📸 Veja os resultados de nossos pacientes
+          </button>
+        </div>
       </div>
 
       <!-- Box de Pagamento -->
@@ -88,23 +92,22 @@
         <p class="mt-3 text-slate-700 text-sm leading-relaxed">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</p>
         <div id="mp-checkout" class="mt-4"></div>
         <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Quero meu plano agora</a>
-
-        <div class="mt-4">
-          <button id="btnResultados" class="rounded-xl px-5 py-3 font-semibold text-white bg-[var(--gold)] hover:bg-yellow-500 transition flex items-center justify-center gap-2 w-full">
-            <span>📸 Veja os resultados de nossos pacientes</span>
-          </button>
-        </div>
-
-        <!-- Galeria -->
-        <div id="galeria" class="hidden mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4 fade-enter">
-          <img src="https://dietapronta.online/uploads/9kg%20em%205%20semanas.jpg" class="rounded-xl shadow-md w-full object-cover">
-          <img src="https://dietapronta.online/uploads/mariele%20queiroz.jpg" class="rounded-xl shadow-md w-full object-cover">
-          <img src="https://dietapronta.online/uploads/dieta.jpg" class="rounded-xl shadow-md w-full object-cover">
-          <img src="https://dietapronta.online/uploads/Julia%20andrade.jpg" class="rounded-xl shadow-md w-full object-cover">
-          <img src="https://dietapronta.online/uploads/cibele%20almeida.jpg" class="rounded-xl shadow-md w-full object-cover">
-          <img src="https://dietapronta.online/uploads/Luciana%20Martins.jpg" class="rounded-xl shadow-md w-full object-cover">
-        </div>
       </aside>
+    </div>
+  </section>
+
+  <!-- Galeria fixa acima do rodapé -->
+  <section class="bg-white py-12 border-t border-slate-200">
+    <div class="container mx-auto px-4 text-center">
+      <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">Resultados Reais de Nossos Pacientes 💪</h2>
+      <div class="galeria grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <img src="https://dietapronta.online/uploads/9kg%20em%205%20semanas.jpg" class="rounded-xl shadow-md w-full object-cover">
+        <img src="https://dietapronta.online/uploads/mariele%20queiroz.jpg" class="rounded-xl shadow-md w-full object-cover">
+        <img src="https://dietapronta.online/uploads/dieta.jpg" class="rounded-xl shadow-md w-full object-cover">
+        <img src="https://dietapronta.online/uploads/Julia%20andrade.jpg" class="rounded-xl shadow-md w-full object-cover">
+        <img src="https://dietapronta.online/uploads/cibele%20almeida.jpg" class="rounded-xl shadow-md w-full object-cover">
+        <img src="https://dietapronta.online/uploads/Luciana%20Martins.jpg" class="rounded-xl shadow-md w-full object-cover">
+      </div>
     </div>
   </section>
 
@@ -130,26 +133,9 @@
 
     if($('year'))$('year').textContent=new Date().getFullYear();
 
-    // Countdown
     let t=5*60;const cE=$('countdown'),cB=$('countdownBox');
     setInterval(()=>{const m=String(Math.floor(t/60)).padStart(2,'0');const s=String(t%60).padStart(2,'0');cE.textContent=`${m}:${s}`;if(t<=60)cB.classList.add('pulse');if(t<=0)cE.textContent='00:00';t--;},1000);
 
-    // Toggle galeria
-    const btnResultados=$('btnResultados'),galeria=$('galeria');
-    btnResultados.addEventListener('click',()=>{
-      const isHidden=galeria.classList.contains('hidden');
-      if(isHidden){
-        galeria.classList.remove('hidden');
-        setTimeout(()=>galeria.classList.add('fade-enter-active'),20);
-        btnResultados.innerHTML="⬆️ Ocultar resultados";
-      }else{
-        galeria.classList.add('hidden');
-        galeria.classList.remove('fade-enter-active');
-        btnResultados.innerHTML="📸 Veja os resultados de nossos pacientes";
-      }
-    });
-
-    // Pagamento
     $('btnPagamento').addEventListener('click',async(ev)=>{
       ev.preventDefault();
       const btn=$('btnPagamento');
