--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -139,12 +139,12 @@
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">Resultados Reais de Nossos Pacientes 💪</h2>
       <div class="galeria grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <img src="https://dietapronta.online/uploads/9kg%20em%205%20semanas.jpg" alt="Fernanda Costa" class="w-full object-cover shadow-md">
-        <img src="https://dietapronta.online/uploads/mariele%20queiroz.jpg" alt="Mariele Queiroz" class="w-full object-cover shadow-md">
-        <img src="https://dietapronta.online/uploads/dieta.jpg" alt="Claudia Silva" class="w-full object-cover shadow-md">
-        <img src="https://dietapronta.online/uploads/Julia%20andrade.jpg" alt="Julia Andrade" class="w-full object-cover shadow-md">
-        <img src="https://dietapronta.online/uploads/cibele%20almeida.jpg" alt="Cibele Almeida" class="w-full object-cover shadow-md">
-        <img src="https://dietapronta.online/uploads/Luciana%20Martins.jpg" alt="Luciana Martins" class="w-full object-cover shadow-md">
+        <img src="https://dietapronta.online/upload/9kg%20em%205%20semanas.jpg" alt="Fernanda Costa" class="w-full object-cover shadow-md">
+        <img src="https://dietapronta.online/upload/mariele%20queiroz.jpg" alt="Mariele Queiroz" class="w-full object-cover shadow-md">
+        <img src="https://dietapronta.online/upload/dieta.jpg" alt="Claudia Silva" class="w-full object-cover shadow-md">
+        <img src="https://dietapronta.online/upload/Julia%20andrade.jpg" alt="Julia Andrade" class="w-full object-cover shadow-md">
+        <img src="https://dietapronta.online/upload/cibele%20almeida.jpg" alt="Cibele Almeida" class="w-full object-cover shadow-md">
+        <img src="https://dietapronta.online/upload/Luciana%20Martins.jpg" alt="Luciana Martins" class="w-full object-cover shadow-md">
       </div>
     </div>
   </section>
